# agent-vitals

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CNAME  index.html
docs/research/: system-prompt-findings.md  what-makes-claude-good-2026.md
src/agent_vitals/: __init__.py  __main__.py  burnout.py  cli.py  coach.py  cost.py  drift.py  efficiency.py  hooks.py  install.py  mcp_server.py  render.py  scanners.py  sessions.py  snapshot.py  stamp.py  trace.py
src/agent_vitals/install/hooks/: wrapper.sh
src/agent_vitals/primer/: __init__.py
src/agent_vitals/primer/assets/agent-vitals/: SKILL.md
tests/: test_burnout.py  test_cli_smoke.py  test_coach.py  test_cost.py  test_docs.py  test_drift.py  test_efficiency.py  test_hooks.py  test_install.py  test_integration.py  test_sessions.py  test_snapshot.py  test_stamp.py  test_trace.py
