[project]
name = "agent-vitals"
version = "0.5.0"
description = "Solo-dev observability for AI agent stacks: shadow (what's running on your behalf) + burnout (how well it's running)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Anirudh Prashant" }]
requires-python = ">=3.11"
keywords = ["ai-agents", "observability", "devtools", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/<your-username>/agent-vitals"
Issues = "https://github.com/<your-username>/agent-vitals/issues"

[project.scripts]
agent-vitals = "agent_vitals.cli:app"
av = "agent_vitals.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_vitals"]
include = [
    "src/agent_vitals/primer/assets/**/*",
    "src/agent_vitals/install/hooks/**/*",
]  

[tool.hatch.build.targets.sdist]
include = ["src/agent_vitals", "README.md", "LICENSE"]